# hermes-agent-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: ci.yml  managed-run-verify.yml  release.yml
assets/: demo.cast
crates/hermes-agent/: Cargo.toml
crates/hermes-agent/src/: budget.rs  cache_manager.rs  compressor.rs  delegate.rs  lib.rs  loop_runner.rs  parallel.rs  token_counter.rs
crates/hermes-agent/tests/: compression_test.rs  e2e_test.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: agents.rs  approval.rs  commands.rs  handlers.rs  main.rs  mcp.rs  oneshot.rs  render.rs  repl.rs  runs.rs  tooling.rs
crates/hermes-config/: Cargo.toml
crates/hermes-config/src/: config.rs  lib.rs  sqlite_store.rs
crates/hermes-config/tests/: session_resume_test.rs
crates/hermes-core/: Cargo.toml
crates/hermes-core/src/: clarify.rs  error.rs  lib.rs  memory.rs  message.rs  platform.rs  provider.rs  session.rs  stream.rs  tool.rs
crates/hermes-core/tests/: message_test.rs
crates/hermes-cron/: Cargo.toml
crates/hermes-cron/src/: job.rs  lib.rs  scheduler.rs  store.rs  tool.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: api_server.rs  discord.rs  lib.rs  message_split.rs  runner.rs  session.rs  telegram.rs
crates/hermes-managed/: Cargo.toml
crates/hermes-managed/src/: filtered_registry.rs  filtered_skills.rs  lib.rs  publish.rs  run_registry.rs  run_summary.rs  runtime_factory.rs  signet.rs  store.rs  tool_policy.rs  types.rs  yaml.rs
crates/hermes-mcp/: Cargo.toml
crates/hermes-mcp/src/: lib.rs
crates/hermes-memory/: Cargo.toml
crates/hermes-memory/src/: builtin.rs  lib.rs  manager.rs
crates/hermes-provider/: Cargo.toml
crates/hermes-provider/src/: anthropic.rs  lib.rs  openai.rs  responses.rs  retry.rs  sse.rs  tool_assembler.rs
crates/hermes-skills/: Cargo.toml
crates/hermes-skills/src/: lib.rs  manager.rs  skill.rs  tools.rs
crates/hermes-tools/: Cargo.toml
crates/hermes-tools/src/: approval_key.rs  browser.rs  browser_handoff.rs  clarify.rs  execute_code.rs  file_read.rs  file_search.rs  file_write.rs  lib.rs  memory_tools.rs  net_utils.rs  patch.rs  path_utils.rs  process_handoff.rs  process_registry.rs  registry.rs  session_cleanup.rs  terminal.rs  vision.rs  web_extract.rs  web_search.rs
crates/hermes-tools/tests/: security_test.rs
crates/hermes-tools/tests/fixtures/: browser_interaction.html
docs/: STATUS.md
docs/specs/: 2026-04-11-hermes-rs-design.md  2026-04-11-phase2-config-storage-tools.md  2026-04-11-phase3-memory-compression-caching.md  2026-04-12-phase4-skills-tools.md  2026-04-15-phase4-delegation-clarify-cli.md  2026-04-15-phase5-gateway-telegram-api.md  2026-04-18-phase6-cron-scheduler.md  2026-04-22-managed-agents-v1-beta-plan.md  2026-04-22-managed-agents.md  2026-04-23-agent-platform-roadmap.md  2026-04-23-managed-run-cancellation-cleanup.md  2026-04-23-managed-run-restart-recovery.md  2026-04-26-managed-mcp-admission-criteria.md
docs/superpowers/plans/: 2026-04-11-phase1-core-agent-loop.md  2026-04-11-phase2-config-storage-tools.md  2026-04-11-phase3-memory-compression-caching.md  2026-04-12-phase4-skills-tools.md  2026-04-15-phase4-delegation-clarify-cli.md  2026-04-15-phase5-gateway.md  2026-04-18-phase6-cron-scheduler.md
examples/: code-reviewer.yaml  github-actions-managed-run-verify.yml  managed-agents-beta.sh  replay-managed-run.sh  verify-managed-run.sh
examples/lib/: managed-run-helpers.sh
