[package]
name = "hermes-agent"
description = "Agent loop, iteration budget, context compression, prompt caching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-provider.workspace = true
hermes-tools.workspace = true
hermes-memory.workspace = true
hermes-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
