[package]
name = "hermes-cli"
description = "Interactive REPL CLI for Hermes Agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-core.workspace = true
hermes-agent.workspace = true
hermes-provider.workspace = true
hermes-tools.workspace = true
hermes-config.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
rustyline.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
secrecy.workspace = true
chrono.workspace = true
