[package]
name = "hermes-cli"
description = "AI agent CLI with streaming tool calling, multi-platform gateway, and OpenAI-compatible API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "agent", "cli", "llm", "tools"]
categories = ["command-line-utilities"]

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
hermes-core.workspace = true
hermes-agent.workspace = true
hermes-provider.workspace = true
hermes-tools.workspace = true
hermes-config.workspace = true
hermes-cron.workspace = true
hermes-gateway.workspace = true
hermes-mcp.workspace = true
hermes-memory.workspace = true
hermes-managed.workspace = true
hermes-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
rustyline.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
secrecy.workspace = true
chrono.workspace = true
signet-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
