[package]
name = "hermes-config"
description = "Configuration loading, session storage (SQLite + FTS5)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
rusqlite.workspace = true
tracing.workspace = true
secrecy.workspace = true
