[package]
name = "hermes-cron"
description = "Scheduled task scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-agent.workspace = true
hermes-provider.workspace = true
hermes-tools.workspace = true
hermes-memory.workspace = true
hermes-config.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
cron.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
secrecy.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
