[package]
name = "hermes-mcp"
description = "MCP client (JSON-RPC over stdio/HTTP)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-config.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
