[package]
name = "hermes-provider"
description = "LLM provider trait and implementations (OpenAI, Anthropic, OpenRouter)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
secrecy.workspace = true
tracing.workspace = true
