[package]
name = "hermes-skills"
description = "Skill discovery, parsing, injection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
anyhow.workspace = true
async-trait.workspace = true
inventory.workspace = true
tokio.workspace = true
walkdir.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
